z-index fixed

--- a/src/app/styles/swiper.scss
+++ b/src/app/styles/swiper.scss
@@ -5,6 +5,7 @@
 .swiper {
     width: 100%;
     height: 100%;
+    z-index: 0;
 }
 
 .swiper-button-disabled {
